--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -5,5 +5,5 @@ spring:
   datasource:
     url: "jdbc:mysql://mysql_lan:3306/bookstore?useUnicode=true&characterEncoding=utf-8"
     username: "root"
-    password: "[4321qwer]"
+    password: "123456"
     initialization-mode: always
